--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,7 @@
     "require": {
         "php": ">=5.5.9",
         "composer-plugin-api": "^1.1",
-        "composer/installers": "^1.2",
-        "drupal-composer/drupal-scaffold": "^2.2",
-        "symfony/filesystem": "^3.3",
-        "webmozart/path-util": "^2.3"
+        "composer/installers": "^1.2"
     },
     "require-dev": {
         "composer/composer": "~1.0",
